2003-05-03  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03887] Re: I-search problem
	* main.c (dispincsrch): don't move cursor if not found.

2003-04-27  qhwt@myrealbox.com

	* [w3m-dev 03886] Re: POSTing patch (Re: User-Agent for Bonus/2ch.cgi)
	* Bonus/2ch.cgi: posting

2003-04-20  qhwt@myrealbox.com

	* [w3m-dev 03883] User-Agent for Bonus/2ch.cgi
	* Bonus/2ch.cgi: User-Agent

2003-04-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03882] Re: Bug#189460: w3m: <q> tag is not recognized
	* file.c (HTMLtagproc1): add HTML_Q, HTML_N_Q
	* html.c (TagMAP): add "q", "/q"
	* html.h (HTML_Q): added
		(HTML_N_Q): added
	* tagtable.tab: add q, /q

2003-04-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03880] Re: convert \ -> / in URL
	* Bonus/backslash_to_slash.cgi: added

2003-04-15  Masanori Kobayasi <zap03216@nifty.ne.jp>

	* [w3m-dev 03878] I-search problem
	* linein.c (inputLineHistSearch): don't call incrfunc twice
	* main.c (dispincsrch): fix search loop problem

2003-04-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03875] Re: SSL & compressed stream
	* file.c (loadGeneralFile): check t_buf != NULL
	* url.c (openURL): don't initialize URLFile here
		(init_stream): 0 clear URLFile

2003-04-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03873] SSL & compressed stream
	* file.c (loadGeneralFile): always update ssl_certificate 
	* url.c (openURL): initialize URLFile

2003-04-12  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>

	* [w3m-dev 03872] goodict.cgi
	* Bonus/goodict.cgi: adapt new goo dict web page

2003-04-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* configure.in (AUXBIN_TARGETS): don't reset, move to head

2003-04-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03870] Re: configure --help
	* acinclude.m4 (AC_W3M_IMAGE): fix help message
			(AC_W3M_SSL): fix typo

2003-04-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03865] Re: configure --help
	* acinclude.m4 (AC_W3M_ANSI_COLOR): depends USE_COLOR