@@ -51,7 +51,6 @@ AC_W3M_DIGEST_AUTH
 AC_W3M_NNTP
 AC_W3M_GOPHER
 AC_W3M_IPv6
-AC_W3M_SSL
 
 AC_W3M_DICT
 AC_W3M_HELP_CGI
@@ -67,6 +66,8 @@ for lib in bsd BSD 44bsd socket nsl dld dl
 do
  AC_W3M_EXTLIBS($lib)
 done
+
+AC_W3M_SSL
 
 dnl Checks for libraries.
 AC_CHECK_FUNC(sqrt,,[AC_CHECK_LIB(m, sqrt)])
