@@ -1,3 +1,9 @@
+2003-05-07  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
+
+	* [w3m-dev 03888] autodetect ssl
+	* acinclude.m4 (AC_W3M_SSL): use SSL_*
+	* configure.in: move AC_W3M_SSL after AC_W3M_EXTLIBS
+
 2003-05-03  Hiroyuki Ito <hito@crl.go.jp>
 
 	* [w3m-dev 03887] Re: I-search problem
